--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,10 +20,12 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
 
-      - name: Install devtools
-        run: install.packages("devtools")
+      - name: Install remotes and devtools
+        run: |
+          install.packages("remotes")
+          remotes::install_cran("devtools")
         shell: Rscript {0}
 
       - name: Install package dependencies
