--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,35 +3,28 @@ name: R-CMD-check
 on:
   push:
     branches: [master]
-  pull_request:
-    branches: [master]
+  # pull_request:
+  #   branches: [master]
 
 jobs:
   R-CMD-check:
     runs-on: ubuntu-latest
+    container:
+      image: rocker/tidyverse:latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev libgit2-dev
+      - name: Install dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::rcmdcheck
+            any::testthat
+            any::covr
 
-      - name: Install remotes and devtools
-        run: |
-          install.packages("remotes")
-          remotes::install_cran("devtools")
-        shell: Rscript {0}
-
-      - name: Install package dependencies
-        run: devtools::install_deps(dependencies = TRUE)
-        shell: Rscript {0}
-
-      - name: Run R CMD check
-        run: devtools::check()
-        shell: Rscript {0}
+      - name: Check
+        uses: r-lib/actions/check-r-package@v2
