--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,43 +1,27 @@
-name: Test Coverage
+name: test-coverage
 
 on:
   push:
     branches: [master]
-  pull_request:
-    branches: [master]
+  # pull_request:
+  #   branches: [master]
 
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Set up R
-      uses: r-lib/actions/setup-r@v2
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
 
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+      - name: Install dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::covr
 
-    - name: Install R package dependencies
-      run: |
-        install.packages("remotes")
-        remotes::install_deps(dependencies = TRUE)
-      shell: Rscript {0}
-
-    - name: Run tests
-      run: |
-        install.packages("testthat")
-        devtools::test()
-      shell: Rscript {0}
-
-    - name: Run coverage and upload to Codecov
-      run: |
-        install.packages("covr")
-        covr::codecov()
-      shell: Rscript {0}
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: Run test coverage
+        run: |
+          Rscript -e 'covr::codecov()'
