--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.0
 Suggests: 
+    devtools,
     knitr,
+    remotes,
     rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
