updated functions and documents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,9 @@
 export(compare_hcru_cohorts)
 export(estimate_hcru)
 export(plot_hcru)
+import(dplyr)
+import(ggplot2)
+import(stats)
+importFrom(dplyr,filter)
+importFrom(dplyr,lag)
+importFrom(stats,median)
