--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,8 @@ Depends: R (>= 4.5.0)
 Imports:
     dplyr,
     ggplot2,
-    tibble,
-    tidyr,
-    stats,
-    lubridate,
-    purrr,
-    stringr
-License: MIT
+    stats
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
