--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(compare_hcru_cohorts)
 export(estimate_hcru)
 export(plot_hcru)
-import(dplyr)
 import(ggplot2)
-import(stats)
-importFrom(dplyr,filter)
-importFrom(dplyr,lag)
+importFrom(dplyr,case_when)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,summarise)
 importFrom(stats,median)
