--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(estimate_hcru)
 export(plot_hcru)
 import(ggplot2)
 importFrom(dplyr,case_when)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
