updated indentation as per lintr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compare_hcru_cohorts)
 export(estimate_hcru)
 export(plot_hcru)
 import(ggplot2)
+importFrom(dplyr,.data)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
