--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(compare_hcru_cohorts)
 export(estimate_hcru)
 export(plot_hcru)
+export(preproc_hcru_fun)
+export(summarize_descriptives)
+import(checkmate)
 import(ggplot2)
 importFrom(dplyr,.data)
 importFrom(dplyr,case_when)
@@ -11,5 +14,15 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(gtsummary,add_n)
+importFrom(gtsummary,add_overall)
+importFrom(gtsummary,add_p)
+importFrom(gtsummary,all_categorical)
+importFrom(gtsummary,all_continuous)
+importFrom(gtsummary,all_stat_cols)
+importFrom(gtsummary,modify_header)
+importFrom(gtsummary,modify_spanning_header)
+importFrom(gtsummary,tbl_summary)
 importFrom(stats,median)
