added desctiptive stats fucntion one with dplyr and other one gtsummary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,10 @@
 
 export(compare_hcru_cohorts)
 export(estimate_hcru)
-export(plot_hcru)
+export(plot_event_counts)
 export(preproc_hcru_fun)
 export(summarize_descriptives)
+export(summarize_descriptives_gtsummary)
 import(checkmate)
 import(ggplot2)
 importFrom(dplyr,.data)
@@ -16,6 +17,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(gtsummary,add_n)
 importFrom(gtsummary,add_overall)
 importFrom(gtsummary,add_p)
