--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Imports:
     checkmate,
     dplyr,
     ggplot2,
-    gtsummary,
-    stats
+    gtsummary
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
