--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,14 @@ export(estimate_hcru)
 export(plot_hcru)
 export(preproc_hcru_fun)
 export(summarize_descriptives)
-export(summarize_descriptives_gtsummary)
+export(summarize_descriptives_gt)
 import(checkmate)
 import(ggplot2)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_data_frame)
+importFrom(checkmate,assert_list)
+importFrom(checkmate,assert_numeric)
+importFrom(checkmate,check_logical)
 importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
