--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,12 @@ RoxygenNote: 7.3.2
 Suggests: 
     devtools,
     knitr,
+    pkgdown,
     remotes,
     rmarkdown,
     testthat (>= 3.0.0),
     tibble
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+BugReports: https://github.com/mumbarkar/hcruR/issues
+Config/Needs/website: pkgdown
