--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Imports:
     checkmate,
     dplyr,
     ggplot2,
-    gtsummary
+    gtsummary,
+    rlang
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
