--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(summarize_descriptives)
 export(summarize_descriptives_gt)
 import(checkmate)
 import(ggplot2)
+import(glue)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_data_frame)
 importFrom(checkmate,assert_list)
