--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(summarize_descriptives_gt)
 import(checkmate)
 import(ggplot2)
 import(glue)
+import(purrr)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_data_frame)
 importFrom(checkmate,assert_list)
@@ -30,6 +31,7 @@ importFrom(gtsummary,add_overall)
 importFrom(gtsummary,add_p)
 importFrom(gtsummary,all_categorical)
 importFrom(gtsummary,all_continuous)
+importFrom(gtsummary,all_of)
 importFrom(gtsummary,all_stat_cols)
 importFrom(gtsummary,modify_header)
 importFrom(gtsummary,modify_spanning_header)
