fixed linting issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,3 +36,4 @@ importFrom(gtsummary,all_stat_cols)
 importFrom(gtsummary,modify_header)
 importFrom(gtsummary,modify_spanning_header)
 importFrom(gtsummary,tbl_summary)
+importFrom(rlang,.data)
