--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,12 @@ Package: hcruR
 Title: Estimate, Compare, and Visualize Healthcare Resource Utilization for Real-World Evidence
 Version: 1.0.0
 Authors@R: 
-    c(
-      person("Maheshkumar", "Umbarkar", 
-             email = "maheshubr30@gmail.com", 
-             role = c("aut", "cre", "cph"))
-    )
-Description: 
-    Tools to estimate, compare, and visualize healthcare resource utilization
-    by care setting and cohort. Provides support for pre/post-index analysis,
-    readmission logic, cost and visit summaries, and publication-ready plots
-    for Real-World Evidence studies using electronic health records or claims
-    data.
+    c(person("Maheshkumar", "Umbarkar", email = "maheshubr30@gmail.com", role = c("aut", "cre")),
+    person("Maheshkumar", "Umbarkar", role = "cph"))
+Description: Tools to estimate, compare, and visualize healthcare resource utilization (HCRU)
+    using data derived from electronic health records (EHR) or real-world evidence (RWE) sources.
+    The package supports pre-index and post-index analysis, patient cohort comparison, 
+    and customizable summaries and visualizations for clinical and health economics research.
 Depends: 
     R (>= 4.2.0)
 Imports:
