--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Estimate, Compare, and Visualize Healthcare Resource Utilization for Real
 Version: 1.0.0
 Authors@R: 
     c(person("Maheshkumar", "Umbarkar", email = "maheshubr30@gmail.com", role = c("aut", "cre", "cph")),
-      person("Safiuddin Shoeb", "Syed", email = "syed.safiuddin@79@gmail.com", role = "aut"))
+      person("Safiuddin Shoeb", "Syed", email = "syed.safiuddin79@gmail.com", role = "aut"))
 Description: Tools to estimate, compare, and visualize healthcare resource utilization (HCRU)
     using data derived from electronic health records (EHR) or real-world evidence (RWE) sources.
     The package supports pre-index and post-index analysis, patient cohort comparison, 
