--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Version: 1.0.0
 Authors@R: 
     c(person("Maheshkumar", "Umbarkar", email = "maheshubr30@gmail.com", role = c("aut", "cre", "cph")),
       person("Safiuddin Shoeb", "Syed", email = "syed.safiuddin79@gmail.com", role = "aut"))
-Description: Tools to estimate, compare, and visualize healthcare resource utilization (HCRU)
-    using data derived from electronic health records (EHR) or real-world evidence (RWE) sources.
-    The package supports pre-index and post-index analysis, patient cohort comparison, 
-    and customizable summaries and visualizations for clinical and health economics research.
+Description: Tools to estimate, compare, and visualize healthcare resource utilization using
+    data derived from electronic health records or real-world evidence sources.
+    The package supports pre index and post index analysis, patient cohort comparison, 
+    and customizable summaries and visualizations for clinical and health economics research. 
     Methods implemented are based on Scott et al. (2022) <doi:10.1080/13696998.2022.2037917>
     and Xia et al. (2024) <doi:10.14309/ajg.0000000000002901>.
 Depends: 
